# cs248_final_project

./: CMakeLists.txt  README.md  handGestureDetection.js  index.html  main.js  node_modules  webServer.js
css/: main.css
humanDetection/: handtracking.js
js/: GPUParticleSystem.js  gesture.js  particle.js  shader_string.js  shader_string.txt
lib/glfw-3.1.1/: Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw-3.1.1/docs/: Doxyfile
lib/glfw-3.1.1/examples/: Makefile
lib/glfw-3.1.1/src/: Makefile  cmake_install.cmake
lib/glfw-3.1.1/tests/: Makefile  cmake_install.cmake
src/: main.cpp
